wide alignment responsiveness bugfix
Resolves #91

--- a/assets/sass/3-blocks/_blocks-core.scss
+++ b/assets/sass/3-blocks/_blocks-core.scss
@@ -32,6 +32,11 @@
 			padding-left: $grid-margins-l;
 			padding-right: $grid-margins-l;
 		}
+
+		@include breakpoint(xxl) {
+			padding-left: $grid-margins-s;
+			padding-right: $grid-margins-s;
+		}
 	}
 
 	&.alignfull {
